<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout
        xmlns:android="http://schemas.android.com/apk/res/android"
        xmlns:tools="http://schemas.android.com/tools"
        xmlns:app="http://schemas.android.com/apk/res-auto"
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        tools:context=".view.MainActivity"
        android:id="@+id/constraintLayout">

    <androidx.appcompat.widget.Toolbar
            android:id="@+id/toolbar"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:background="@color/colorPrimary"
            android:elevation="@dimen/toolbar_elevation"
            app:titleTextColor="@color/white"
            app:subtitleTextColor="@color/white"
            app:layout_constraintTop_toTopOf="parent"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintStart_toStartOf="parent"/>

    <FrameLayout
            android:id="@+id/touchable_area"
            android:layout_width="match_parent"
            android:layout_height="match_parent">

        <Chronometer
                android:id="@+id/counter"
                android:layout_width="match_parent"
                android:layout_height="86dp"
                android:layout_gravity="center|top"
                android:gravity="center"
                android:layout_marginTop="190dp"
                android:textColor="@color/colorPrimaryDark"
                android:textStyle="bold"
                android:textSize="64sp"/>

        <androidx.appcompat.widget.AppCompatButton
                android:id="@+id/pauseButton"
                android:layout_width="@dimen/buttons_width"
                android:layout_height="@dimen/buttons_height"
                android:layout_gravity="center"
                android:background="@drawable/background_button_pause"
                android:layout_marginTop="140dp"
                android:text="@string/button_pause"
                android:textColor="@color/white"
                android:textSize="@dimen/buttons_text_size"
                android:visibility="gone"/>

        <androidx.appcompat.widget.AppCompatButton
                android:id="@+id/resumeButton"
                android:layout_width="@dimen/buttons_width"
                android:layout_height="@dimen/buttons_height"
                android:layout_gravity="center"
                android:background="@drawable/background_button_resume"
                android:layout_marginTop="140dp"
                android:text="@string/button_resume"
                android:textColor="@color/white"
                android:textSize="@dimen/buttons_text_size"
                android:visibility="gone"/>

        <androidx.appcompat.widget.AppCompatButton
                android:id="@+id/stopButton"
                android:layout_width="@dimen/buttons_width"
                android:layout_height="@dimen/buttons_height"
                android:layout_gravity="center"
                android:background="@drawable/background_button_stop"
                android:layout_marginTop="228dp"
                android:text="@string/button_stop"
                android:textColor="@color/white"
                android:textSize="@dimen/buttons_text_size"
                android:visibility="gone"/>

    </FrameLayout>

</androidx.constraintlayout.widget.ConstraintLayout>