...
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:gravity="center"
            android:padding="16dp">

        <TextView
                android:id="@+id/dialog_book_time_text_view"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_gravity="center"
                android:gravity="center"
                android:textColor="@color/colorPrimaryDark"
                android:textStyle="bold"
...
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_margin="16dp"
            android:gravity="end">

        <androidx.appcompat.widget.AppCompatButton
                android:id="@+id/dialog_discard_button"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                style="?buttonBarNegativeButtonStyle"
                android:textSize="@dimen/dialog_buttons_text_size"
                android:text="@string/button_discard"/>

...
