<?xml version="1.0" encoding="utf-8"?>
<menu xmlns:android="http://schemas.android.com/apk/res/android"
      xmlns:app="http://schemas.android.com/apk/res-auto">

    <item
        android:id="@+id/action_list"
        android:title="@string/menu_open_list"
        android:icon="@drawable/ic_baseline_list_24px"
        app:showAsAction="always"/>
</menu>